--- a/superai-analysis/superai-analysis-api/pom.xml
+++ b/superai-analysis/superai-analysis-api/pom.xml
@@ -4,18 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.superai</groupId>
-        <artifactId>super-ai</artifactId>
+        <artifactId>superai-analysis</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>superai-analysis</artifactId>
-    <name>superai-analysis</name>
+    <artifactId>superai-analysis-service</artifactId>
 
-    <modules>
-        <module>superai-analysis-api</module>
-        <module>superai-analysis-service</module>
-    </modules>
-
-
+    <properties>
+        <java.version>21</java.version>
+    </properties>
 
     <build>
         <plugins>
