--- a/superai-analysis/superai-analysis-api/pom.xml
+++ b/superai-analysis/superai-analysis-api/pom.xml
@@ -7,8 +7,7 @@
         <artifactId>superai-analysis</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>superai-analysis-service</artifactId>
-
+    <artifactId>superai-analysis-api</artifactId>
     <properties>
         <java.version>21</java.version>
     </properties>
