--- a/superai-analysis/superai-analysis-service/pom.xml
+++ b/superai-analysis/superai-analysis-service/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.superai</groupId>
+            <artifactId>superai-common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
