--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
 
     <properties>
         <java.version>21</java.version>
-        <spring-boot-version>3.1.4</spring-boot-version>
+        <spring-boot-version>3.1.5</spring-boot-version>
         <maven.plugin.version>3.8.1</maven.plugin.version>
+        <project-versions>1.0.0</project-versions>
     </properties>
 
 
@@ -36,7 +37,19 @@
             <dependency>
                 <groupId>com.superai</groupId>
                 <artifactId>superai-common</artifactId>
-                <version>1.0.0</version>
+                <version>${project-versions}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.superai</groupId>
+                <artifactId>superai-analysis-api</artifactId>
+                <version>${project-versions}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.26</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -66,6 +79,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.11</version>
+                <configuration>
+                    <fork>true</fork>
+                    <finalName>${project.build.finalName}</finalName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -79,7 +104,13 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
         </plugins>
     </build>
+
 
 </project>
